--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 
 <body>
-    <!-- Video Background -->
+    /*  Video Background */
     <video autoplay loop muted id="bg-video">
         <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
-    <!-- Content -->
-    <div class="content">
-        <!-- Logo -->
+    
+    <figure class="content">
+        /* The Logo */
         <header>
             <figure>
                 <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
             </figure>
         </header>
 
-        <!-- Navigation -->
+        /* Navigation */
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -35,23 +35,27 @@
             </ul>
         </nav>
 
-        <!-- Search Bar -->
-        <div class="search-container">
+        /* Search bar */
+        <figure class="search-container">
             <form action="/search" method="GET">
                 <input type="text" name="q" placeholder="Search...">
                 <button type="submit">Search</button>
             </form>
-        </div>
-    </div>
-
-    <!-- Footer -->
+        </figure>
+    /* Sign in  Log in*/
+   <figure class="signin-container">
+       <a href="/signin">Sign In</a>
+       <span> | </span>
+       <a href=" /login">Log In</a>
+   </figure>
+    /* Footer*/ 
     <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
             <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
             <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
             <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
+            
         </ul>
         <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
     </footer>
