--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    /*  Video Background */
+    <!-- Video Background -->
     <video autoplay loop muted id="bg-video">
         <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -16,14 +16,14 @@
 
     
     <figure class="content">
-        /* The Logo */
+        
         <header>
             <figure>
                 <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
             </figure>
         </header>
 
-        /* Navigation */
+         <!--Navigation -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -35,20 +35,20 @@
             </ul>
         </nav>
 
-        /* Search bar */
+        <!--Search bar-->
         <figure class="search-container">
             <form action="/search" method="GET">
                 <input type="text" name="q" placeholder="Search...">
                 <button type="submit">Search</button>
             </form>
         </figure>
-    /* Sign in  Log in*/
+    <!--Sign in  Log in-->
    <figure class="signin-container">
        <a href="/signin">Sign In</a>
        <span> | </span>
        <a href=" /login">Log In</a>
    </figure>
-    /* Footer*/ 
+     <!--Footer-->
     <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
