--- a/TV Shows.html
+++ b/TV Shows.html
@@ -62,7 +62,7 @@
             <figcaption class="image-title">Capitan Jack</figcaption>
         </figure>
      <figure class="image-item">
-            <img alt="Instenstion" src="inste.jpeg">
+            <img alt="Instenstion" src="intse.jpeg">
             <figcaption class="image-title">Instenstion</figcaption>
         </figure>
          <figure class="image-item">
