--- a/TV Shows.html
+++ b/TV Shows.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <figure class="grid-container">
+    <figure class="horizontal-container">
         <figure class="image-item">
             <a href="911.html"><img alt="911" src="911.jpeg"></a>
             <figcaption class="image-title">The 911</figcaption>
