--- a/TV Shows.html
+++ b/TV Shows.html
@@ -30,7 +30,7 @@
     </header>
     <figure class="horizontal-container">
         <figure class="image-item">
-            <a href="911.html"><img alt="911" src="911.jpeg"></a>
+            <a href="911.html"><img alt="911"height="340" src="911.jpeg" width="250"></a>
             <figcaption class="image-title">The 911</figcaption>
         </figure>
         <figure class="image-item">
