--- a/TV Shows.html
+++ b/TV Shows.html
@@ -26,69 +26,143 @@
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
-        </nav>
-    </header>
-    <figure class="horizontal-container">
-        <figure class="image-item">
-            <a href="911.html"><img alt="911"height="700" src="911.jpeg" width="350"></a>
-            <figcaption class="image-title">The 911</figcaption>
-        </figure>
-        <figure class="image-item">
-            <img alt="FBI" src="FBI.jpeg">
-            <figcaption class="image-title">The FBI</figcaption>
-        </figure>
-        <figure class="image-item">
-            <img alt="Beacon 3" src="beac.jpeg">
-            <figcaption class="image-title">The Beacon</figcaption>
-        </figure>
-        <figure class="image-item">
-            <img alt="Bloods" src="bloods.jpeg">
-            <figcaption class="image-title">The Bloods</figcaption>
-        </figure>
-        <figure class="image-item">
-            <img alt="The Neighborhood" src="hood.jpeg">
-            <figcaption class="image-title">The Neighborhood</figcaption>
-        </figure>
-        <figure class="image-item">
-            <img alt="FBI" src="FBI.jpeg">
-            <figcaption class="image-title">The FBI</figcaption>
-        </figure>
-     <figure class="image-item">
-            <img alt="Tom and Jerry" src="tom.jpeg">
-            <figcaption class="image-title">Tom and Jerry</figcaption>
-        </figure>
-         <figure class="image-item">
-            <img alt="Capitan Jack" src="jack.jpeg">
-            <figcaption class="image-title">Capitan Jack</figcaption>
-        </figure>
-     <figure class="image-item">
-            <img alt="Instenstion" src="intse.jpeg">
-            <figcaption class="image-title">Instenstion</figcaption>
-        </figure>
-         <figure class="image-item">
-            <img alt="Zig and Sharko" src="zig.jpeg">
-            <figcaption class="image-title">Zig and Sharko</figcaption>
-        </figure>
-         <figure class="image-item">
-            <img alt="Pj Masks" src="pj.jpeg">
-            <figcaption class="image-title">Pj Masks</figcaption>
-        </figure>
-         <figure class="image-item">
-            <img alt="Dragon Ballz" src="dragon.jpeg">
-            <figcaption class="image-title">The Dragon Ballz </figcaption>
-        </figure>
-    
-     <!-- Footer -->
-    <footer>
-        <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
-        </ul>
-        <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
-    </footer>
-</body>
 
+
+  <section class="mySlides fade">
+    <img src="img/Red%20X.jpg">
+    <h1>Titans<br>New Season</h1>
+  </section>
+
+  <section class="mySlides fade">
+    <img src="img/flash.jpg">
+    <h1>The Flash<br>New Season</h1>
+  </section>
+
+  <section class="mySlides fade">
+    <img src="img/Ted.jpg">
+    <h1>Ted Lasso<br>New Season</h1>
+  </section>
+
+  <section>
+    <button class="prev" onclick="plusSlides(-1)">❮</button>
+    <button class="next" onclick="plusSlides(1)">❯</button>
+  </section>
+
+  <section style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </section>
+
+  <section>
+    <h2>What's Hot</h2>
+  </section>
+  <section class="movies">
+    <article>
+      <figure>
+        <img src="911.jpeg">
+        <h3>Peacemaker<br>2021</h3>
+      </figure>
+    </article>
+    <a href="911.html">
+      <article>
+        <figure>
+          <img src="tom.jpeg">
+          <h3>Arrow<br>2012</h3>
+        </figure>
+      </article>
+    </a>
+    <article>
+      <figure>
+        <img src="dragon.jpeg">
+        <h3>Titans<br>2018</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="twilght.jpeg">
+        <h3>Young Sheldon<br>2017</h3>
+      </figure>
+    </article>
+  </section>
+
+  <section>
+    <h2>Returning Season</h2>
+  </section>
+
+  <section class="movies">
+    <article>
+      <figure>
+        <img src="swat.jpeg">
+        <h3>You<br>Season 3</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="show.jpeg">
+        <h3>Abott Elementary<br>Season 2</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="tracker.jpeg">
+        <h3>The Flash<br>Season 9</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/tedlasso_1400x2100_v1.jpg">
+        <h3>Ted Lasso<br>Season 3</h3>
+      </figure>
+    </article>
+  </section>
+
+  <section>
+    <h2>New Series</h2>
+  </section>
+
+  <section class="movies">
+    <article>
+      <figure>
+        <img src="img/velma_1400x2100_v1.jpg">
+        <h3>Velma<br>2023</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/shrinking_1400x2100_v1.jpg">
+        <h3>Shrinking<br>2023</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/gothamknights_1400x2100_v1.jpg">
+        <h3>Gotham<br>2023</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/manifest_s4_1400x2100_v1.jpg">
+        <h3>Manifest<br>2023</h3>
+      </figure>
+    </article>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Warner Bros. Entertainment Inc. All rights reserved.</p>
+    <figure>
+
+      <a href="https://web.facebook.com/warnerbrosent/?_rdc=1&_rdr"><img src="img/MicrosoftTeams-image%20(1).png" alt="Facebook"></a>
+    
+	<a href="https://twitter.com/Warnerbros/"><img src=
+	"img/MicrosoftTeams-image%20(3).png" alt="Twitter"></a>
+    <a href="https://www.instagram.com/warnerbrosentertainment/"><img src="img/MicrosoftTeams-image%20(2).png" alt="Instagram"></a>
+	 <a href="https://www.youtube.com/user/WarnerBrosPictures"><img src="img/MicrosoftTeams-image%20(4).png" alt="Youtube"></a>
+    <a href="https://www.pinterest.com/warnerbrosent/"><img src="img/MicrosoftTeams-image%20(6).png" alt="Pinterest"></a>
+    <a href="https://www.linkedin.com/company/warner-bros--entertainment/"><img src="img/MicrosoftTeams-image%20(7).png" alt="Linkedin"></a>
+    </figure>
+  </footer>
+
+  <script src="main.js"></script>
+</body>
 </html>
