--- a/TV Shows.html
+++ b/TV Shows.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>TV Shows</title>
-    <link rel="stylesheet" type="text/css" href="tvshows.css">
+  <title>Tv Shows</title>
 </head>
-
 <body>
-    <!-- Background Video -->
-    <video id="bg-video" autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <header>
-        <nav>
-            <a href="#top">
-                <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
-            </a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="movies.html">Movies</a></li>
-                <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="games & apps.html">Games & Apps</a></li>
-                <li><a href="collections.html">Collections</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-            </ul>
-
+  <header>
+    <figure>
+      <!-- Logo -->
+            <figure class="logo">
+                <a href="#top">
+                    <img alt="logo" src="Screenshot 2024-04-12 160015.png">
+                </a>
+            </div>
+    </figure>
+    <div class="bx bx-menu" id="menu"></div>
+    <!-- Navigation -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="movies.html">Movies</a></li>
+                    <li><a href="TV Shows.html">TV Shows</a></li>
+                    <li><a href="games & apps.html">Games & Apps</a></li>
+                    <li><a href="collections.html">Collections</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
+                </ul>
+            </nav>
+  </header>
 
   <section class="mySlides fade">
-    <img src="img/Red%20X.jpg">
+    <img src="tom.jpeg">
     <h1>Titans<br>New Season</h1>
   </section>
 
   <section class="mySlides fade">
-    <img src="img/flash.jpg">
-    <h1>The Flash<br>New Season</h1>
+    <img src="911.jpeg">
+    <h1>The 911<br>New Season</h1>
   </section>
 
   <section class="mySlides fade">
-    <img src="img/Ted.jpg">
-    <h1>Ted Lasso<br>New Season</h1>
+    <img src="Flash.jpg">
+    <h1>Flash<br>New Season</h1>
   </section>
 
   <section>
@@ -60,28 +59,28 @@
   <section class="movies">
     <article>
       <figure>
-        <img src="911.jpeg">
-        <h3>Peacemaker<br>2021</h3>
+        <img src="swat.jpeg">
+        <h3>The Swat<br>2021</h3>
       </figure>
     </article>
     <a href="911.html">
       <article>
         <figure>
-          <img src="tom.jpeg">
-          <h3>Arrow<br>2012</h3>
+          <img src="jack">
+          <h3>Capitan Jack<br>2012</h3>
         </figure>
       </article>
     </a>
     <article>
       <figure>
-        <img src="dragon.jpeg">
-        <h3>Titans<br>2018</h3>
+        <img src="pj.jpg">
+        <h3>PJ Masks<br>2018</h3>
       </figure>
     </article>
     <article>
       <figure>
-        <img src="twilght.jpeg">
-        <h3>Young Sheldon<br>2017</h3>
+        <img src="intse.jpeg">
+        <h3>Instension<br>2017</h3>
       </figure>
     </article>
   </section>
@@ -93,19 +92,19 @@
   <section class="movies">
     <article>
       <figure>
-        <img src="swat.jpeg">
+        <img src="img/you_s3_keyart.jpg">
         <h3>You<br>Season 3</h3>
       </figure>
     </article>
     <article>
       <figure>
-        <img src="show.jpeg">
+        <img src="img/abbottelementary_1400x2100_v1.jpg">
         <h3>Abott Elementary<br>Season 2</h3>
       </figure>
     </article>
     <article>
       <figure>
-        <img src="tracker.jpeg">
+        <img src="img/the_flash_s9_keyart.jpeg">
         <h3>The Flash<br>Season 9</h3>
       </figure>
     </article>
@@ -148,21 +147,17 @@
     </article>
   </section>
 
-  <footer>
-    <p>&copy; 2023 Warner Bros. Entertainment Inc. All rights reserved.</p>
-    <figure>
-
-      <a href="https://web.facebook.com/warnerbrosent/?_rdc=1&_rdr"><img src="img/MicrosoftTeams-image%20(1).png" alt="Facebook"></a>
-    
-	<a href="https://twitter.com/Warnerbros/"><img src=
-	"img/MicrosoftTeams-image%20(3).png" alt="Twitter"></a>
-    <a href="https://www.instagram.com/warnerbrosentertainment/"><img src="img/MicrosoftTeams-image%20(2).png" alt="Instagram"></a>
-	 <a href="https://www.youtube.com/user/WarnerBrosPictures"><img src="img/MicrosoftTeams-image%20(4).png" alt="Youtube"></a>
-    <a href="https://www.pinterest.com/warnerbrosent/"><img src="img/MicrosoftTeams-image%20(6).png" alt="Pinterest"></a>
-    <a href="https://www.linkedin.com/company/warner-bros--entertainment/"><img src="img/MicrosoftTeams-image%20(7).png" alt="Linkedin"></a>
-    </figure>
-  </footer>
-
-  <script src="main.js"></script>
+   <!-- Footer -->
+    <footer>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
