--- a/TV Shows.html
+++ b/TV Shows.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Tv Shows</title>
+  <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
 <body>
   <header>
