--- a/TV Shows.html
+++ b/TV Shows.html
@@ -8,7 +8,7 @@
   <header>
     <figure>
       <!-- Logo -->
-            <figure class="logo">
+            <div class="logo">
                 <a href="#top">
                     <img alt="logo" src="Screenshot 2024-04-12 160015.png">
                 </a>
@@ -64,17 +64,15 @@
         <h3>The Swat<br>2021</h3>
       </figure>
     </article>
-    <a href="911.html">
-      <article>
-        <figure>
-          <img src="jack">
-          <h3>Capitan Jack<br>2012</h3>
-        </figure>
-      </article>
-    </a>
     <article>
       <figure>
-        <img src="pj.jpg">
+        <img src="jack.jpeg">
+        <h3>Capitan Jack<br>2012</h3>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="pj.jpeg">
         <h3>PJ Masks<br>2018</h3>
       </figure>
     </article>
