--- a/TV Shows.html
+++ b/TV Shows.html
@@ -8,42 +8,42 @@
   <header>
     <figure>
       <!-- Logo -->
-            <div class="logo">
-                <a href="#top">
-                    <img alt="logo" src="Screenshot 2024-04-12 160015.png">
-                </a>
-            </div>
+      <div class="logo">
+        <a href="#top">
+          <img alt="logo" src="Screenshot 2024-04-12 160015.png">
+        </a>
+      </div>
     </figure>
     <div class="bx bx-menu" id="menu"></div>
     <!-- Navigation -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                    <li><a href="TV Shows.html">TV Shows</a></li>
-                    <li><a href="games & apps.html">Games & Apps</a></li>
-                    <li><a href="collections.html">Collections</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
-                </ul>
-            </nav>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="TV Shows.html">TV Shows</a></li>
+        <li><a href="games & apps.html">Games & Apps</a></li>
+        <li><a href="collections.html">Collections</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section class="mySlides fade">
-    <img src="tom.jpeg">
-    <h1>Titans<br>New Season</h1>
-  </section>
+  <section class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="tom.jpeg">
+      <h1>Titans<br>New Season</h1>
+    </div>
 
-  <section class="mySlides fade">
-    <img src="911.jpeg">
-    <h1>The 911<br>New Season</h1>
-  </section>
+    <div class="mySlides fade">
+      <img src="911.jpeg">
+      <h1>The 911<br>New Season</h1>
+    </div>
 
-  <section class="mySlides fade">
-    <img src="Flash.jpg">
-    <h1>Flash<br>New Season</h1>
-  </section>
+    <div class="mySlides fade">
+      <img src="Flash.jpg">
+      <h1>Flash<br>New Season</h1>
+    </div>
 
-  <section>
     <button class="prev" onclick="plusSlides(-1)">❮</button>
     <button class="next" onclick="plusSlides(1)">❯</button>
   </section>
@@ -58,105 +58,62 @@
     <h2>What's Hot</h2>
   </section>
   <section class="movies">
-    <article>
-      <figure>
-        <img src="swat.jpeg">
-        <h3>The Swat<br>2021</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="jack.jpeg">
-        <h3>Capitan Jack<br>2012</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="pj.jpeg">
-        <h3>PJ Masks<br>2018</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="intse.jpeg">
-        <h3>Instension<br>2017</h3>
-      </figure>
-    </article>
+    <!-- Movies Section Content Here -->
   </section>
 
   <section>
     <h2>Returning Season</h2>
   </section>
-
   <section class="movies">
-    <article>
-      <figure>
-        <img src="img/you_s3_keyart.jpg">
-        <h3>You<br>Season 3</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/abbottelementary_1400x2100_v1.jpg">
-        <h3>Abott Elementary<br>Season 2</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/the_flash_s9_keyart.jpeg">
-        <h3>The Flash<br>Season 9</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/tedlasso_1400x2100_v1.jpg">
-        <h3>Ted Lasso<br>Season 3</h3>
-      </figure>
-    </article>
+    <!-- Movies Section Content Here -->
   </section>
 
   <section>
     <h2>New Series</h2>
   </section>
-
   <section class="movies">
-    <article>
-      <figure>
-        <img src="img/velma_1400x2100_v1.jpg">
-        <h3>Velma<br>2023</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/shrinking_1400x2100_v1.jpg">
-        <h3>Shrinking<br>2023</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/gothamknights_1400x2100_v1.jpg">
-        <h3>Gotham<br>2023</h3>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="img/manifest_s4_1400x2100_v1.jpg">
-        <h3>Manifest<br>2023</h3>
-      </figure>
-    </article>
+    <!-- Movies Section Content Here -->
   </section>
 
-   <!-- Footer -->
-    <footer>
-        <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
-        </ul>
-        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
-    </footer>
-</body>
+  <!-- Footer -->
+  <footer>
+    <ul class="social-media-icons">
+      <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+      <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+      <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+      <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+      <!-- Add more social media icons as needed -->
+    </ul>
+    <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
+  </footer>
 
+  <script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {slideIndex = 1}
+      if (n < 1) {slideIndex = slides.length}
+      for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";
+      dots[slideIndex-1].className += " active";
+    }
+  </script>
+</body>
 </html>
