--- a/TV Shows.html
+++ b/TV Shows.html
@@ -7,10 +7,7 @@
 <body>
   <header>
     <figure>
-      <!-- Logo -->
-      <div class="logo">
-        <a href="#top">
-          <img alt="logo" src="Screenshot 2024-04-12 160015.png">
+     <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
         </a>
       </div>
     </figure>
