--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tv Shows</title>
-  <link rel="stylesheet" type="text/css" href="tvshows.css">
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+  
   <header>
-    <figure>
-      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
+    <figure class="logo">
+      <a href="#top"><img alt="logo" src="R.png"></a>
     </figure>
     <div class="bx bx-menu" id="menu"></div>
     <nav>
@@ -21,31 +22,28 @@
       </ul>
     </nav>
   </header>
-
-        <!--Search bar-->
-        <figure class="search-container">
-            <form action="/search" method="GET">
-                <input type="text" name="q" placeholder="Search...">
-                <button type="submit">Search</button>
-            </form>
-        </figure>
-    <!--Sign in  Log in-->
-   <figure class="signin-container">
-       <a href="/signin">Sign In</a>
-       <span> | </span>
-       <a href=" /login">Log In</a>
-   </figure>
-     <!--Footer-->
-    <footer>
-        <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            
-        </ul>
-        <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
-    </footer>
+  
+  <figure class="search-container">
+    <form action="/search" method="GET">
+      <input type="text" name="q" placeholder="Search...">
+      <button type="submit">Search</button>
+    </form>
+  </figure>
+  
+  <figure class="signin-container">
+    <a href="/signin">Sign In</a>
+    <span> | </span>
+    <a href="/login">Log In</a>
+  </figure>
+  
+  <footer>
+    <ul class="social-media-icons">
+      <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+      <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+      <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+      <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+    </ul>
+    <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
+  </footer>
 </body>
-
 </html>
