--- a/index.html
+++ b/index.html
@@ -5,45 +5,47 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  
   <header>
     <figure class="logo">
       <a href="#top"><img alt="logo" src="R.png"></a>
     </figure>
     <div class="bx bx-menu" id="menu"></div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="movies.html">Movies</a></li>
-        <li><a href="TV Shows.html">TV Shows</a></li>
-        <li><a href="games & apps.html">Games & Apps</a></li>
-        <li><a href="collections.html">Collections</a></li>
-        <li><a href="feedback.html">Feedback</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <figure class="search-container">
-    <form action="/search" method="GET">
-      <input type="text" name="q" placeholder="Search...">
-      <button type="submit">Search</button>
-    </form>
-  </figure>
-  
-  <figure class="signin-container">
-    <a href="/signin">Sign In</a>
-    <span> | </span>
-    <a href="/login">Log In</a>
-  </figure>
-  
-  <footer>
-    <ul class="social-media-icons">
-      <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-      <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-      <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-      <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-    </ul>
-    <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
-  </footer>
+   <body>
+    <!-- Video Background -->
+    <video autoplay loop muted id="bg-video">
+        <source src="background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="TV Shows.html">TV Shows</a></li>
+                <li><a href="games & apps.html">Games & Apps</a></li>
+                <li><a href="collections.html">Collections</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
+
+        <!-- Search Bar -->
+        <div class="search-container">
+            <form action="/search" method="GET">
+                <input type="text" name="q" placeholder="Search...">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <ul class="social-media-icons">
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
+    </footer>
 </body>
-</html>
