Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -179,45 +179,55 @@
                 <a href="blur.html"><img alt="Blur" src="blur.png" width="149" height="234"></a>
                 <figcaption>Blur</figcaption>
             </figure>
+             <figure class="game-image">
+                <a href="whatsapp.html"><img alt="Whatsapp" src="whATSP.png" width="149" height="234"></a>
+                <figcaption>Whatsapp</figcaption>
+            </figure>
 
             <figure class="game-image">
                 <a href="fifa22.html"><img alt="Fifa 22" src="fifa22.jpeg" width="149" height="234"></a>
                 <figcaption>Fifa 22</figcaption>
             </figure>
-
+            
             <figure class="game-image">
                 <a href="call.html"><img alt="Call Of Duty" src="call of duty.jpeg" width="149" height="234"></a>
                 <figcaption>Call Of Duty</figcaption>
             </figure>
-
+             <figure class="game-image">
+                <a href="twitter.html"><img alt="Twitter" src=" TWITTER.jpeg" width="149" height="234"></a>
+                <figcaption>Twitter</figcaption>
+            </figure>
             <figure class="game-image">
                 <a href="w2k.html"><img alt="Wrestling 2K" src="w2k.jpeg" width="149" height="234"></a>
                 <figcaption>Wrestling 2K</figcaption>
             </figure>
-
             <figure class="game-image">
                 <a href="gta5.html"><img alt="GTA 5" src="gt.jpeg" width="149" height="234"></a>
                 <figcaption>GTA 5</figcaption>
             </figure>
-
             <figure class="game-image">
                 <a href="grid2.html"><img alt="GRID 2" src="grid2.jpeg" width="149" height="234"></a>
                 <figcaption>GRID 2</figcaption>
             </figure>
-
             <figure class="game-image">
                 <a href="hot.html"><img alt="Need For Speed Hot Pursuit" src="hot.jpeg" width="149" height="234"></a>
                 <figcaption>Need For Speed Hot Pursuit</figcaption>
             </figure>
-
             <figure class="game-image">
                 <a href="nfs.html"><img alt="Need for Speed" src="ned.jpeg" width="149" height="234"></a>
                 <figcaption>Need For Speed</figcaption>
             </figure>
-
+            <figure class="game-image">
+                <a href="tiktok.html"><img alt="tiktok" src="TIKTOK.jpeg" width="149" height="234"></a>
+                <figcaption>Tiktok</figcaption>
+            </figure>
             <figure class="game-image">
                 <a href="mort.html"><img alt="Mortal Kombat" src="mort.jpeg" width="149" height="234"></a>
                 <figcaption>Mortal Kombat</figcaption>
+            </figure>
+             <figure class="game-image">
+                <a href="ig.html"><img alt="ig" src="IG.png" width="149" height="234"></a>
+                <figcaption>Instagram</figcaption>
             </figure>
 
             <figure class="game-image">
