--- a/TV Shows.html
+++ b/TV Shows.html
@@ -24,12 +24,12 @@
 
   <section class="slideshow-container">
     <div class="mySlides fade">
-      <img src="tom.jpeg">
-      <h1>Titans<br>New Season</h1>
+      <img src="arrow.jpeg">
+      <h1>The Arrow<br>New Season</h1>
     </div>
 
     <div class="mySlides fade">
-      <img src="911.jpeg">
+      <img src="thunder.jpeg">
       <h1>The 911<br>New Season</h1>
     </div>
 
@@ -52,31 +52,38 @@
     <h2>What's Hot</h2>
   </section>
   <section class="movies">
-    <!-- Movies Section Content Here -->
+        <img src="winchesters.jpeg" alt="What's Hot Movie 1">
+        <img src="twilght.jpeg" alt="What's Hot Movie 2">
   </section>
 
   <section>
-    <h2>Returning Season</h2>
+    <h2>Trending </h2>
   </section>
+  <img src="intse.jpeg" alt="Trending">
+  <img src="jack" alt="Trending">
+  <img src="power.jpeg" alt="Trending">
+   <img src="tom.jpeg" alt="Trending">
+   <img src="zig.jpeg" alt="Trending">
   <section class="movies">
-    <!-- Movies Section Content Here -->
+    
   </section>
 
   <section>
     <h2>New Series</h2>
   </section>
   <section class="movies">
-    <!-- Movies Section Content Here -->
+        <img src="bel.jpeg" alt="New Series">
+        <img src="game.jpeg" alt="New Series">
+        <img src="the.jpeg" alt="New Series">
+        <img src="arrow.jpeg" alt="New Series">
+        <img src="911.jpeg" alt="New Series">
   </section>
-
-  <!-- Footer -->
   <footer>
     <ul class="social-media-icons">
       <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
       <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
       <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
       <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-      <!-- Add more social media icons as needed -->
     </ul>
     <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
   </footer>
