--- a/TV Shows.html
+++ b/TV Shows.html
@@ -24,12 +24,12 @@
 
   <section class="slideshow-container">
     <div class="mySlides fade">
-      <img src="arrow.jpeg">
+      <img src="tom.jpeg">
       <h1>The Arrow<br>New Season</h1>
     </div>
 
     <div class="mySlides fade">
-      <img src="thunder.jpeg">
+      <img src="the.jpeg">
       <h1>The 911<br>New Season</h1>
     </div>
 
@@ -60,7 +60,7 @@
     <h2>Trending </h2>
   </section>
   <img src="intse.jpeg" alt="Trending">
-  <img src="jack" alt="Trending">
+  <img src="jack.jpeg" alt="Trending">
   <img src="power.jpeg" alt="Trending">
    <img src="tom.jpeg" alt="Trending">
    <img src="zig.jpeg" alt="Trending">
