--- a/TV Shows.html
+++ b/TV Shows.html
@@ -25,17 +25,17 @@
   <section class="slideshow-container">
     <div class="mySlides fade">
       <img src="tom.jpeg">
-      <h1>The Arrow<br>New Season</h1>
+      <h1>The Tom and Jerry<br>Trending</h1>
     </div>
 
     <div class="mySlides fade">
       <img src="the.jpeg">
-      <h1>The 911<br>New Season</h1>
+      <h1>The Fresh Prince<br>New Season</h1>
     </div>
 
     <div class="mySlides fade">
       <img src="Flash.jpg">
-      <h1>Flash<br>New Season</h1>
+      <h1>Flash<br>What's Hot</h1>
     </div>
 
     <button class="prev" onclick="plusSlides(-1)">❮</button>
@@ -54,6 +54,9 @@
   <section class="movies">
         <img src="winchesters.jpeg" alt="What's Hot Movie 1">
         <img src="twilght.jpeg" alt="What's Hot Movie 2">
+         <img src="Flash.jpg" alt="What's Hot Movie 3">
+         <img src="all.jpeg" alt="What's Hot Movie 4">
+        <img src="NCIS.jpeg" alt="What's Hot Movie 5">
   </section>
 
   <section>
