--- a/TV Shows.html
+++ b/TV Shows.html
@@ -52,11 +52,11 @@
     <h2>What's Hot</h2>
   </section>
   <section class="movies">
-        <img src="winchesters.jpeg" alt="What's Hot Movie 1">
-        <img src="twilght.jpeg" alt="What's Hot Movie 2">
-         <img src="Flash.jpg" alt="What's Hot Movie 3">
-         <img src="all.jpeg" alt="What's Hot Movie 4">
-        <img src="NCIS.jpeg" alt="What's Hot Movie 5">
+        <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
+        <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
+         <img src="Flash.jpg" width="149" alt="What's Hot Movie 3"height="234">
+         <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
+        <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
   </section>
 
   <section>
