--- a/TV Shows.html
+++ b/TV Shows.html
@@ -62,11 +62,11 @@
   <section>
     <h2>Trending </h2>
   </section>
-  <img src="intse.jpeg" alt="Trending">
-  <img src="jack.jpeg" alt="Trending">
-  <img src="power.jpeg" alt="Trending">
-   <img src="tom.jpeg" alt="Trending">
-   <img src="zig.jpeg" alt="Trending">
+  <img src="intse.jpeg" width="149" alt="Trending" height="234">
+  <img src="jack.jpeg" width="149" alt="Trending" height="234">
+  <img src="power.jpeg" width="149" alt="Trending" height="234">
+   <img src="tom.jpeg" width="149" alt="Trending" height="234">
+   <img src="zig.jpeg" width="149" alt="Trending" height="234">
   <section class="movies">
     
   </section>
@@ -75,11 +75,11 @@
     <h2>New Series</h2>
   </section>
   <section class="movies">
-        <img src="bel.jpeg" alt="New Series">
-        <img src="game.jpeg" alt="New Series">
-        <img src="the.jpeg" alt="New Series">
-        <img src="arrow.jpeg" alt="New Series">
-        <img src="911.jpeg" alt="New Series">
+        <img src="bel.jpeg"  width="149" alt="New Series" height="234">
+        <img src="game.jpeg"  width="149" alt="New Series" height="234">
+        <img src="the.jpeg"  width="149" alt="New Series" height="234">
+        <img src="arrow.jpeg"  width="149" alt="New Series" height="234">
+        <img src="911.jpeg" width="149" alt="New Series" height="234">
   </section>
   <footer>
     <ul class="social-media-icons">
