--- a/TV Shows.html
+++ b/TV Shows.html
@@ -50,37 +50,37 @@
 
   <section>
     <h2>What's Hot</h2>
-  </section>
-  <section class="movies">
-        <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
-        <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
-         <img src="Flash.jpg" width="149" alt="What's Hot Movie 3"height="234">
-         <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
-        <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
+    <div class="movies">
+      <img src="winchesters.jpeg" alt="What's Hot Movie 1">
+      <img src="twilght.jpeg" alt="What's Hot Movie 2">
+      <img src="Flash.jpg" alt="What's Hot Movie 3">
+      <img src="all.jpeg" alt="What's Hot Movie 4">
+      <img src="NCIS.jpeg" alt="What's Hot Movie 5">
+    </div>
   </section>
 
   <section>
-    <h2>Trending </h2>
-  </section>
-  <img src="intse.jpeg" width="149" alt="Trending" height="234">
-  <img src="jack.jpeg" width="149" alt="Trending" height="234">
-  <img src="power.jpeg" width="149" alt="Trending" height="234">
-   <img src="tom.jpeg" width="149" alt="Trending" height="234">
-   <img src="zig.jpeg" width="149" alt="Trending" height="234">
-  <section class="movies">
-    
+    <h2>Trending</h2>
+    <div class="movies">
+      <img src="intse.jpeg" alt="Trending">
+      <img src="jack.jpeg" alt="Trending">
+      <img src="power.jpeg" alt="Trending">
+      <img src="tom.jpeg" alt="Trending">
+      <img src="zig.jpeg" alt="Trending">
+    </div>
   </section>
 
   <section>
     <h2>New Series</h2>
+    <div class="movies">
+      <img src="bel.jpeg" alt="New Series">
+      <img src="game.jpeg" alt="New Series">
+      <img src="the.jpeg" alt="New Series">
+      <img src="arrow.jpeg" alt="New Series">
+      <img src="911.jpeg" alt="New Series">
+    </div>
   </section>
-  <section class="movies">
-        <img src="bel.jpeg"  width="149" alt="New Series" height="234">
-        <img src="game.jpeg"  width="149" alt="New Series" height="234">
-        <img src="the.jpeg"  width="149" alt="New Series" height="234">
-        <img src="arrow.jpeg"  width="149" alt="New Series" height="234">
-        <img src="911.jpeg" width="149" alt="New Series" height="234">
-  </section>
+  
   <footer>
     <ul class="social-media-icons">
       <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
