--- a/collections.html
+++ b/collections.html
@@ -16,9 +16,7 @@
     <!-- Content -->
     <div class="content">
         <header>
-                <a href="#top">
-                    <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
-                </a>
+                 <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
             </figure>
 
             <nav>
