--- a/deadpool.html
+++ b/deadpool.html
@@ -67,8 +67,7 @@
 
 <body>
     <header>
-        <a href="#top">
-            <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
+         <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
