--- a/feedback.html
+++ b/feedback.html
@@ -127,8 +127,7 @@
         Your browser does not support the video tag.
     </video>
     <header>
-        <a href="#top">
-            <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
+        <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
         </a>
         <nav>
             <ul>
