--- a/games & apps.html
+++ b/games & apps.html
@@ -153,8 +153,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="#top">
-                        <img alt="logo" src="Screenshot 2024-04-12 160015.png">
+                      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
                     </a>
                 </div>
                 <ul>
