--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <!-- Logo -->
         <header>
             <figure>
-                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
+                  <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
             </figure>
         </header>
 
