--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -9,183 +8,217 @@
     <style>
       
 /* CSS code for header */
-header {
-  position: fixed;
-  height: 60px;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 30px;
-  transition: 0.5s;
-  background: black;
-}
+        header {
+            position: fixed;
+            height: 60px;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px 30px;
+            transition: 0.5s;
+            background: black;
+        }
 
-figure img {
-  height: 60px;
-  width: auto;
-  margin-right: auto;
-}
+        figure img {
+            height: 60px;
+            width: auto;
+            margin-right: auto;
+        }
 
-nav {
-  display: flex;
-  column-gap: 5rem;
-}
+        nav {
+            display: flex;
+            column-gap: 5rem;
+        }
 
-nav ul {
-  display: flex;
-  gap: 30px;
-  list-style: none;
-}
+        nav ul {
+            display: flex;
+            gap: 30px;
+            list-style: none;
+        }
 
-nav li {
-  position: relative;
-}
+        nav li {
+            position: relative;
+        }
 
-nav a {
-  font-size: 20px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  color: white;
-  position: relative;
-  transition: color 0.4s;
-}
+        nav a {
+            font-size: 20px;
+            letter-spacing: 2px;
+            text-decoration: none;
+            color: white;
+            position: relative;
+            transition: color 0.4s;
+        }
 
-nav a::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: red;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
+        nav a::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background-color: red;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+        }
 
-nav a:hover {
-  animation: colorChange 0.5s forwards;
-}
+        nav a:hover {
+            animation: colorChange 0.5s forwards;
+        }
 
-nav a:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-  animation: underlineChange 0.5s forwards;
-}
+        nav a:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+            animation: underlineChange 0.5s forwards;
+        }
 
-@keyframes colorChange {
-  0% {
-    color: white;
-  }
-  50% {
-    color: red;
-  }
-  100% {
-    color: green;
-  }
-}
+        @keyframes colorChange {
+            0% {
+                color: white;
+            }
 
-@keyframes underlineChange {
-  0% {
-    background-color: red;
-  }
-  100% {
-    background-color: green;
-  }
-}
+            50% {
+                color: red;
+            }
 
-/* CSS code for background video */
-#bg-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-  z-index: -1; /* Ensure the video stays behind other content */
-  object-fit: cover; /* Cover the entire viewport */
-}
+            100% {
+                color: green;
+            }
+        }
 
-/* Styling for other elements */
-.content {
-  position: relative; /* Ensure content stays above video */
-  z-index: 1;
-  color: white; /* Example color */
-  padding-bottom: 80px; /* Adjust padding to accommodate the footer */
-  text-align: center; /* Center text */
-}
+        @keyframes underlineChange {
+            0% {
+                background-color: red;
+            }
 
-/* Styling for navigation bar */
-nav {
-  background-color: lightgrey; /* Light grey background color for the navigation */
-  padding: 10px 0; /* Add padding top and bottom */
-  text-align: center;
-}
+            100% {
+                background-color: green;
+            }
+        }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center; /* Center text */
-}
+        /* CSS code for background video */
+        #bg-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1;
+            /* Ensure the video stays behind other content */
+            object-fit: cover;
+            /* Cover the entire viewport */
+        }
 
-nav ul li {
-  display: inline;
-  margin-right: 20px;
-}
+        /* Styling for other elements */
+        .content {
+            position: relative;
+            /* Ensure content stays above video */
+            z-index: 1;
+            color: white;
+            /* Example color */
+            padding-bottom: 80px;
+            /* Adjust padding to accommodate the footer */
+            text-align: center;
+            /* Center text */
+        }
 
-nav ul li a {
-  color: black;
-  text-decoration: none;
-  padding: 5px 10px; /* Padding for each navigation link */
-  border-radius: 5px; /* Rounded corners */
-}
+        /* Styling for navigation bar */
+        nav {
+            background-color: lightgrey;
+            /* Light grey background color for the navigation */
+            padding: 10px 0;
+            /* Add padding top and bottom */
+            text-align: center;
+        }
 
-nav ul li a:hover {
-  background-color: lightgrey; /* Light grey background on hover */
-}
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+            /* Center text */
+        }
 
-/* Styling for footer */
-footer {
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  color: white;
-  text-align: center;
-  padding: 20px 0;
-  position: fixed; /* Position fixed at the bottom */
-  bottom: 0;
-  width: 100%;
-  z-index: 3; /* Ensure the footer is above the video */
-}
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
 
-.social-media-icons {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+        nav ul li a {
+            color: black;
+            text-decoration: none;
+            padding: 5px 10px;
+            /* Padding for each navigation link */
+            border-radius: 5px;
+            /* Rounded corners */
+        }
 
-.social-media-icons li {
-  display: inline;
-  margin: 0 10px;
-}
+        nav ul li a:hover {
+            background-color: lightgrey;
+            /* Light grey background on hover */
+        }
 
-.social-media-icons li a {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #fff;
-  line-height: 40px;
-  text-align: center;
-}
+        /* Styling for search bar */
+        .search-container {
+            text-align: center;
+            margin-top: 20px;
+        }
 
-.social-media-icons li a img {
-  vertical-align: middle;
-  max-width: 100%;
-  max-height: 100%;
-}
+        .search-container input[type=text] {
+            width: 50%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .search-container button[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 50%;
+        }
+
+        .search-container button[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        /* Styling for footer */
+        footer {
+            background-color: rgba(0, 0, 0, 0.5);
+            /* Semi-transparent background */
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: fixed;
+            /* Position fixed at the bottom */
+            bottom: 0;
+            width: 100%;
+            z-index: 3;
+            /* Ensure the footer is above the video */
+        }
+
+        .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .social-media-icons li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        .social-media-icons
 
     </style>
 </head>
