--- a/index.html
+++ b/index.html
@@ -156,10 +156,15 @@ nav ul li a {
     /* Rounded corners */
 }
 
-nav ul li a:hover {
-    background-color: lightgrey;
-    /* Light grey background on hover */
+nav ul li a {
+    color: white; /* Set the font color to white */
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
+
+/* Rest of your existing CSS code */
+
 
 /* Styling for search bar */
 .search-container {
@@ -284,6 +289,4 @@ footer {
         <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
     </footer>
 </body>
-
 </html>
-may do the same here
