--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@ nav {
     align-items: center;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px;
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: Arial, sans-serif; /* Change the font family */
+    font-size: 16px; /* Adjust the font size */
+    font-weight: 500; /* Adjust the font weight */
 }
+
 
 nav li {
     position: relative;
