--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@ figure img {
     width: auto;
     margin-right: auto;
 }
+        /* Styling for navigation bar */
+nav {
+    background-color: lightgrey;
+    /* Light grey background color for the navigation */
+    padding: 10px 0;
+    /* Add padding top and bottom */
+    text-align: center;
+    position: relative; /* Add position relative */
+    z-index: 1001; /* Set a higher z-index value */
+}
+
 
 nav {
     display: flex;
